Moved inizialization of the set of planned exercise in the constructor, and switched in getWorkoutSheet return of colletions with return of set.copy